godtolo_infra/manifest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: godtolo-web-svc
  namespace: godtolo-web-prod
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 80
      targetPort: 80
